<resources>
    <string name="map_api_key">AIzaSyAAsegy6p5JIzuX-xrAaNB5yhiMkRwwOcE</string>
    <string name="app_name">Samir Abbas Hospital</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="language">English</string>
    <string name="home">Home</string>
    <string name="book_appointment">Book An Appointment</string>
    <string name="doctors_list">Doctors</string>
    <string name="services">Services</string>
    <string name="facilities">Facilities</string>
    <string name="gallery">Gallery</string>
    <string name="doctors">Doctors</string>
    <string name="dr_samir_abbas_hospital">Dr.Samir Abbas Hospital</string>
    <string name="dentist">Select Type</string>
    <string name="available">Available Today</string>
    <string name="unavailable">Not Available Today</string>
    <string name="doc_name">Dr.Ayushmaan Gupta</string>
    <string name="occupation">Dentist</string>
    <string name="experience">12 Years experience</string>
    <string name="qualification">MBBS</string>
    <string name="appoinment_time_slot">Select a time slot</string>
    <string name="weekly_schedule">Schedule</string>
    <string name="month">MARCH</string>
    <string name="selected_date">Today</string>
    <string name="find_and_book">Find \u0026 Book</string>
    <string name="search_doc">Search a doctor</string>
    <string name="choose_specialist">Choose Specialist</string>
    <string name="women_health">Women Health</string>
    <string name="About_us">About us</string>
    <string name="share_app">Share app</string>
    <string name="contact_us">Contact us</string>
    <string name="summary">Summary</string>
    <string name="confirmation">Confirmation</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="name">NAME</string>
    <string name="mobile_no">MOBILE NO.</string>
    <string name="national_id">National Id/QMA</string>
    <string name="insurance_no">Insurance Number</string>
    <string name="confirm">CONFIRM</string>
    <string name="doctor">Doctor</string>
    <string name="thank_you">Thank You</string>
    <string name="booking_confirmed">Your Booking Has been Confirmed</string>
    <string name="booking_id">Booking ID</string>
    <string name="save">Save</string>
    <string name="done">Done</string>
    <string name="facilities_lc">Facilites</string>
    <string name="patient_details">Patient Details</string>
    <string name="name_lc">Name</string>
    <string name="mobile_no_lc">Mobile No</string>
    <string name="next">Next</string>
    <string name="enter_patient_detail">ENTER PATIENT DETAILS</string>
    <string name="contact_us_lc">Contact us</string>
    <string name="about_us">About us</string>
    <string name="adress">ADDRESS</string>
    <string name="phone_no">PHONE NO</string>
    <string name="email">EMAIL</string>
    <string name="gallery_lc">Gallery</string>
    <string name="lab_test">Lab Tests \u0026 Diagnostics</string>
    <string name="services_lc">Services</string>
    <string name="emergency_trauma">Emergency \u0026 Trauma Care</string>
    <string name="Wards_and_rooms">Wards \u0026 Rooms</string>
    <string name="not_available">Not available</string>
    <string name="no_slots">No slots available on this date</string>
    <string name="doctor_not_available">Doctor not available today.</string>
    <string name="morning">Morning</string>
    <string name="afternoon">Afternoon</string>
    <string name="evening">Evening</string>
    <string name="night">Night</string>
    <string name="slot_not_selected">Select a slot for booking</string>
    <string name="enter_name">Enter name</string>
    <string name="enter_number">Enter mobile number</string>
    <string name="enter_id">Enter national ID</string>
    <string name="enter_isn_number">Enter insurance number</string>
    <string name="booking_failed">Failed to book the appointment, try again</string>
    <string name="screenshot_captured">Screenshot captured</string>
    <string name="something_wrong">Something is not right, try again</string>
    <string name="no_doctors_found">No doctors found, try another category.</string>
    <string name="search_doctor_by_name">Search doctor by name</string>
    <string name="no_doctor_by_this_name">No doctor found by this name</string>
    <string name="gallery_desc">We provide affordable, holistic quality healthcare appropriate to the needs of our clients by a team of committed, caring professionals striving through a research driven environment.Scroll down to explore our infrastructure.</string>
    <string name="mission">Mission</string>
    <string name="mission_desc">TO BE, AS WE ALWAYS WERE, PIONEER IN THE FIELD OF MEDICINE SEEKING\n DEVELOPMENT AND INITIATING CHANGE TO PROVIDE THE MOST ADVANCED SERVICES WE\n WELL EXTEND KNOWLEDGE AND CARE BEYOND THE LIMITS OF CONVENTIONAL PRACTICE AND\nCREATE A BOND OF TRUST WITH OUR PATIENTS AND THEIR FAMILIES.</string>
    <string name="values">Values</string>
    <string name="values_desc">• DEDICATED TO TO EVERY PATIENT.\n•CONSTANTLY SEEKING DEVELOPMENT\n•TO DEVELOP TRUST BETWEEN PATIENTS AND COLLEAGUES.\n•TO GIVE TO OUR COMMUNITY\n•TO ADHERE TO ISLAMIC MORALS AND ETHICS\n•TO DISSIPATE KNOWLEDGE AND AWARENESS.</string>
    <string name="info">Professor Samir Abbas, founder of the hospital, and owner of a number of\n women wellness centers kingdom-wise, is an authority in the field of infertility, reproductive endocrinology and women wellness.\nHe is well known international figure in the field of women's reproduction\n and assisted reproductive techniques, and was the first to facilitate a test\n tube baby in the arab and muslim world in 1986, he also performed the very\n first successful in-vitro fertilization procedure in the kingdom resulting in a\nhealthy neonate.</string>
    <string name="getting_slot">Getting time slot</string>
    <string name="getting_slot_msg">Please wait while we are getting the time slots...</string>
    <string name="getting_doctor">Getting doctors list</string>
    <string name="getting_doctor_msg">Please wait while we are getting doctors list</string>
    <string name="getting_special">Getting speciality list</string>
    <string name="getting_special_msg">Please wait while we are getting speciality list</string>
    <string name="book">Booking appointment</string>
    <string name="book_msg">Please wait while we are booking your appointment...</string>
    <string name="failed_slot_fetching">Failed to fetch slot details try again</string>
    <string-array name="services_list_heading">
        <item>Women’s Health Department</item>
        <item>General Obstetrics and Gynaecology</item>
        <item>Reproductive Endocrinology</item>
        <item>Maternal Fetal Medicine</item>
        <item>Andrology</item>
        <item>Dermatology / Cosmetology</item>
        <item>Surgery</item>
        <item>Urology</item>
        <item>Plastic Surgery</item>
        <item>Women’s Breast Disease</item>
        <item>Bariatric Surgery</item>
        <item>Ophthalmology</item>
        <item>Oto-rhinolaryngology (ENT)</item>
        <item>Orthopaedics</item>
        <item>Pulmonology</item>
        <item>Gastroenterology</item>
        <item>Non-invasive Cardiology</item>
        <item>Anaesthesia</item>
        <item>Intensive Care Unit (ICU-Adults)</item>
        <item>Dietary Services</item>
        <item>Stem Cells / Rejuvenate Therapy</item>
        <item>Emergency Medicine department</item>
        <item>Pediatrics and neonatal department</item>

    </string-array>
    <string name="address">Head Office Jeddah - Ash Shati District Alkurnaysh Road\nZip Code 23411 Tel 012 618 7777 TollFree 920012525\nEmail info@dsah.sa Website www.dsah.sa</string>
</resources>