<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f6f6f6"
    tools:context="com.dr.SamirAbbas.activities.AppointmentTimeSlotActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/appBarLayout"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" >

                <TextView
                    android:textStyle="bold"
                    android:textSize="@dimen/_14sdp"
                    android:layout_centerVertical="true"
                    android:textColor="@color/orange"
                    android:text="@string/appoinment_time_slot"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

        </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>

    <ImageView
        android:id="@+id/strip"
        android:background="@drawable/strip"
        android:layout_below="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_4sdp" />


    <LinearLayout
        android:layout_below="@+id/strip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        android:background="@color/white"
        android:id="@+id/docInfoLayout"
        android:orientation="horizontal">


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/_5sdp">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profile"
                android:layout_width="@dimen/_50sdp"
                android:layout_height="@dimen/_50sdp"

                android:src="@drawable/blank_profile" />

            <TextView
                android:id="@+id/qualificationTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_5sdp"
                android:text="@string/qualification" />

        </LinearLayout>


        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:orientation="vertical"
            android:paddingBottom="@dimen/_5sdp"
            android:paddingTop="@dimen/_5sdp">

            <TextView
                android:id="@+id/docNameTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_alignParentTop="true"
                android:layout_alignStart="@+id/occupationTextView"
                android:text="@string/doc_name"
                android:textSize="18sp"
                android:textStyle="bold" />


            <TextView
                android:id="@+id/occupationTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/docNameTextView"
                android:layout_marginLeft="@dimen/_12sdp"
                android:layout_marginTop="@dimen/_8sdp"
                android:text="@string/occupation"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/availabilityTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/occupationTextView"
                android:layout_marginLeft="@dimen/_12sdp"
                android:text="@string/available"
                android:layout_marginTop="@dimen/_5sdp"
                android:textColor="@color/orange"
                android:textSize="14sp" />


        </RelativeLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_below="@+id/docInfoLayout"
        android:id="@+id/calenderLayout"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_100sdp"
        android:layout_margin="@dimen/_25sdp"
        android:background="@color/white">

        <TextView
            android:text="@string/weekly_schedule"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_width="wrap_content"
            android:textColor="@color/cal_orange"
            android:textStyle="bold"
            android:layout_height="wrap_content" />



    </LinearLayout>
</RelativeLayout>
