<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f6f6f6"
    tools:context="com.dr.SamirAbbas.activities.AppointmentTimeSlotActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/appBarLayout"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" >


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_alignParentStart="true"
                    android:textStyle="bold"
                    android:textSize="@dimen/_14sdp"
                    android:layout_centerVertical="true"
                    android:textColor="@color/orange"
                    android:text="@string/patient_details"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </RelativeLayout>


        </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>

    <ImageView
        android:id="@+id/strip"
        android:background="@drawable/strip"
        android:layout_below="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_4sdp" />

    <ImageView
        android:layout_alignParentEnd="true"
        android:layout_width="@dimen/_70sdp"
        android:layout_alignParentBottom="true"
        android:src="@drawable/logo"
        android:layout_height="@dimen/_77sdp" />
    <LinearLayout
        android:layout_below="@+id/strip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        android:background="@color/white"
        android:id="@+id/docInfoLayout"
        android:orientation="horizontal">


        <LinearLayout
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/_5sdp">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profile"
                android:layout_width="@dimen/_50sdp"
                android:layout_height="@dimen/_50sdp"

                android:src="@drawable/blank_profile" />

            <TextView
                android:id="@+id/qualificationTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_5sdp"
                android:text="@string/qualification" />

        </LinearLayout>


        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:orientation="vertical"
            android:paddingBottom="@dimen/_5sdp"
            android:paddingTop="@dimen/_5sdp">

            <TextView
                android:id="@+id/docNameTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_alignParentTop="true"
                android:layout_alignStart="@+id/occupationTextView"
                android:text="@string/doc_name"
                android:textSize="18sp"
                android:textStyle="bold" />


            <TextView
                android:id="@+id/occupationTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/docNameTextView"
                android:layout_marginLeft="@dimen/_12sdp"
                android:layout_marginTop="@dimen/_8sdp"
                android:text="@string/occupation"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/availabilityTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/occupationTextView"
                android:layout_marginLeft="@dimen/_12sdp"
                android:text="@string/available"
                android:layout_marginTop="@dimen/_5sdp"
                android:textColor="@color/orange"
                android:textSize="14sp" />


        </RelativeLayout>

    </LinearLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_below="@+id/docInfoLayout"
        android:layout_margin="@dimen/_10sdp"
        android:layout_width="match_parent"
        android:background="@color/white"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/holder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_marginTop="@dimen/_15sdp"
                android:textStyle="bold"
                android:textSize="@dimen/_14sdp"
                android:layout_gravity="center"
                android:text="@string/enter_patient_detail"
                android:textColor="@color/orange"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <LinearLayout
                android:layout_margin="@dimen/_10sdp"

                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="@dimen/_5sdp"
                    android:layout_gravity="center_vertical"
                    android:background="@drawable/patient_name"
                    android:layout_width="@dimen/_20sdp"
                    android:layout_height="@dimen/_20sdp" />

                <EditText
                    android:backgroundTint="@color/textGray"
                    android:id="@+id/nameTextView"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_35sdp"
                    android:layout_marginLeft="@dimen/_5sdp"
                    android:hint="@string/name_lc"
                    android:inputType="text"
                    android:singleLine="false" />
            </LinearLayout>


            <LinearLayout
                android:layout_margin="@dimen/_10sdp"

                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="@dimen/_5sdp"
                    android:layout_gravity="center_vertical"
                    android:background="@drawable/mobile"
                    android:layout_width="@dimen/_20sdp"
                    android:layout_height="@dimen/_20sdp" />

                <EditText
                    android:backgroundTint="@color/textGray"
                    android:id="@+id/numberTextView"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_35sdp"
                    android:layout_marginLeft="@dimen/_5sdp"
                    android:hint="@string/mobile_no_lc"
                    android:inputType="number"
                    android:singleLine="false" />
            </LinearLayout>

            <LinearLayout
                android:layout_margin="@dimen/_10sdp"

                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="@dimen/_5sdp"
                    android:layout_gravity="center_vertical"
                    android:background="@drawable/national_id"
                    android:layout_width="@dimen/_20sdp"
                    android:layout_height="@dimen/_20sdp" />

                <EditText
                    android:backgroundTint="@color/textGray"
                    android:id="@+id/id_QMA_textView"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_35sdp"
                    android:layout_marginLeft="@dimen/_5sdp"
                    android:hint="@string/national_id"
                    android:inputType="text"
                    android:singleLine="false" />
            </LinearLayout>

            <LinearLayout
                android:layout_margin="@dimen/_10sdp"

                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="@dimen/_5sdp"
                    android:layout_gravity="center_vertical"
                    android:background="@drawable/insurance_no"
                    android:layout_width="@dimen/_20sdp"
                    android:layout_height="@dimen/_20sdp" />

                <EditText
                    android:backgroundTint="@color/textGray"
                    android:id="@+id/insuranceTextView"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_35sdp"
                    android:layout_marginLeft="@dimen/_5sdp"
                    android:hint="@string/insurance_no"
                    android:inputType="text"
                    android:singleLine="false" />
            </LinearLayout>

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

    <Button
        android:id="@+id/confirmButton"
        android:layout_width="@dimen/_90sdp"
        android:layout_height="@dimen/_30sdp"
        android:text="@string/next"
        android:textStyle="bold"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/_15sdp"
        android:textColor="@color/dark_green"
        android:background="@drawable/btn_border_green"
        />
</RelativeLayout>