<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f6f6f6"
    tools:context="com.dr.SamirAbbas.activities.DoctorDetailsActivity">

    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_marginTop="@dimen/_15sdp"
        android:padding="@dimen/_5sdp"
        android:background="@color/white"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/_5sdp"
            android:orientation="vertical">

            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_height="@dimen/_50sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_width="@dimen/_50sdp"
                android:src="@drawable/blank_profile"
                android:id="@+id/profile"/>

            <TextView
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_5sdp"
                android:id="@+id/qualificationTextView"
                android:text="@string/qualification"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>


        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:orientation="vertical"
            android:paddingTop="@dimen/_5sdp"
            android:paddingBottom="@dimen/_5sdp">

            <TextView
                android:id="@+id/docNameTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginLeft="@dimen/_12sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:text="@string/doc_name"
                android:textSize="18sp"
                android:textStyle="bold" />


            <TextView
                android:id="@+id/occupationTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/docNameTextView"
                android:layout_marginLeft="@dimen/_12sdp"
                android:layout_marginTop="@dimen/_8sdp"
                android:text="@string/occupation"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/experienceTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/occupationTextView"
                android:layout_marginLeft="@dimen/_12sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:text="@string/experience" />

            <Button
                android:id="@+id/bookAppointmentButton"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignRight="@+id/docNameTextView"
                android:layout_marginRight="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:backgroundTint="@color/blue"
                android:text="Book" />

            <TextView
                android:id="@+id/availabilityTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_below="@+id/bookAppointmentButton"
                android:layout_marginRight="@dimen/_15sdp"
                android:text="@string/available"
                android:textColor="@color/orange"
                android:textSize="14sp" />




        </RelativeLayout>

    </LinearLayout>


</RelativeLayout>
